# simulador-dfsa

./: .gitignore  .run-full.sh.swp  README.md  estimators.md  run-full.sh  slides.md
plots/: Untitled.ipynb  eom-lee.csv  main.py  out-po2-frames.csv  out.csv  plots.ipynb
simulador/: 1  CMakeLists.txt
simulador/src/: Estimator.cpp  Estimator.h  Simulador.cpp  Simulador.h  Vec3.h  config.cpp  config.h  main.cpp
